--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,19 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
+*,*::before , *::after{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  background-color: whitesmoke;
+  overflow-x: hidden;
+}
+
+@import url("../style/style.css")
