--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,8 @@ header {
     position: fixed;
     top: 0;
     border-bottom: 1px solid rgba(255, 255, 255, 0.696);
+    background-color: #1A191F;
+    z-index: 50;
 }
 
 .brand-name {
@@ -79,7 +81,7 @@ header {
     position: fixed;
     left: 0;
     top: 66px;
-    z-index: 5;
+    z-index: 50;
     transition: 0.4s ease;
 }
 
@@ -220,25 +222,100 @@ header {
 }
 
 /* ********************************************************* */
-.content {
+/* .content {
     min-height: 100vh;
-}
+} */
 
 .content .content__head>h1 {
     font-size: 27px;
 }
+
 .content .content__head>p {
     font-size: 13px;
     display: flex;
     align-items: center;
     cursor: pointer;
 }
+
 .content .content__head>p>i {
     font-size: 22px;
     padding-left: 5px;
     transition: 0.4s ease;
 }
+
 .content .content__head>p:hover i {
     color: #DD9904;
     transition: 0.4s ease;
+}
+
+.movie-items>div {
+    position: relative;
+}
+
+.movie-items figure {
+    position: relative;
+}
+
+.movie-items figure::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #00000000;
+    visibility: hidden;
+    transition: 0.3s;
+}
+
+.movie-items figure:hover::after {
+    visibility: visible;
+    background-color: #0000006e;
+    transition: 0.3s;
+    z-index: 5;
+}
+
+.movie-items img {
+    width: 100%;
+    height: 100%;
+}
+
+.movie-items figcaption {
+    font-size: 18px;
+    text-wrap: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.movie-items p {
+    font-size: 13px;
+    text-transform: capitalize;
+    color: #DD9904;
+}
+
+.movie-items .imdb-rate {
+    display: block;
+    position: absolute;
+    width: 36px;
+    height: 36px;
+    background-color: rgba(0, 0, 0, 0.763);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    top: 10px;
+    left: 10px;
+}
+
+.imdb-rate-border-green {
+    border: 3px solid #29b474;
+}
+
+.imdb-rate-border-yellow {
+    border: 3px solid #ffc312;
+}
+
+.imdb-rate-border-red {
+    border: 3px solid #eb5757;
 }
