--- a/style/style.css
+++ b/style/style.css
@@ -224,23 +224,31 @@ header {
 
 /* ********************************************************* */
 .content {
+    position: relative;
+}
+.bg{
     background-image: url("../public/home__bg.jpg");
     width: 100%;
     min-height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    position: relative;
+    background-attachment: fixed;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    filter: blur(10px);
 }
-.content::before{
+.bg::before{
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.789);
-    filter: blur(95px); 
+    background-color: rgba(0, 0, 0, 0.198);
 }
 
 .content .content__head{
@@ -310,8 +318,37 @@ header {
 
 .movie-items figure {
     position: relative;
+    border: 1px solid rgba(255, 255, 255, 0.185);
 }
-
+.movie-items figure>.play-icon {
+    position: absolute;
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    border: 6px solid rgba(255, 255, 255, 0.539);
+    overflow: hidden;
+    z-index: 2;
+    transition: 0.4s ease;
+    cursor: pointer;
+    opacity: 0;
+    visibility: hidden;
+}
+.movie-items figure>.play-icon>a{
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;   
+}
+.movie-items figure>.play-icon>a>i{
+    color: #DD9904;
+    font-size: 35px;
+    display: inline-flex;    
+}
 .movie-items figure::after {
     content: "";
     position: absolute;
@@ -329,7 +366,14 @@ header {
     background-color: #0000006e;
     transition: 0.3s;
 }
-
+.movie-items figure:hover .play-icon {
+    visibility: visible;
+    opacity: 1;
+}
+.movie-items figure .play-icon:hover{
+    border: 6px solid #DD9904;
+    transition: 0.4s ease;
+}
 .movie-items img {
     width: 100%;
     height: 100%;
@@ -375,18 +419,12 @@ header {
 .imdb-rate-border-red {
     border: 3px solid #eb5757;
 }
-
-.desktop-filter-box{
-}
-.desktop-filter-box ul{
-}
 .desktop-filter-box ul>li{
     cursor: pointer;
-    transition: 0.4s ease;
-    padding: 10px 0;
     position: relative;
 }
-.desktop-filter-box ul>li:nth-of-type(1){
+.desktop-filter-box ul>li:nth-of-type(1),
+.mobile-filter-box ul>li:nth-of-type(1){
     color: #DD9904;
 }
 .desktop-filter-box ul>li:nth-of-type(1)>span{
@@ -402,10 +440,13 @@ header {
     transition: 0.4s ease;
     opacity: 0;
 }
-.desktop-filter-box ul>li:hover{
-    color: #DD9904;
-}
 .desktop-filter-box a{
+    display: block;
     font-size: 14px;
     text-wrap: nowrap;
+    padding: 10px 0;
+    transition: 0.4s ease;
+}
+.desktop-filter-box ul>li>a:hover{
+    color: #DD9904;
 }
