--- a/style/style.css
+++ b/style/style.css
@@ -233,12 +233,12 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
-    position: absolute;
+    /* background-attachment: fixed; */
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    background-size: cover;
     filter: blur(10px);
 }
 .bg::before{
