--- a/style/responsive.css
+++ b/style/responsive.css
@@ -1,10 +1,10 @@
-@media (max-width:576px) {}
+@media (max-width:639px) {}
 
-@media (min-width:577px) {}
+@media (min-width:640px) {}
 
 @media (min-width:768px) {}
 
-@media (min-width:992px) {
+@media (min-width:1024px) {
     .content .content__head>h1 {
         font-size: 36px;
     }
@@ -13,6 +13,10 @@
     }
 }
 
-@media (min-width:1200px) {}
+@media (min-width:1280px) {
+    .other-pic{
+        max-height: none;
+    }
+}
 
-@media (min-width:1400px) {}
+@media (min-width:1536px) {}
