--- a/style/style.css
+++ b/style/style.css
@@ -564,6 +564,9 @@ header {
     height: 100%;
     object-fit: cover;
 }
+.article-details-right{
+    max-height: 486px;
+}
 .article-details-right figure{
     width: 100%;
     height: 100%;
